--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,10 @@
 <?include "inc/top.html"?>
   <title>THE FACE SHOP</title>
+  <!-- 2020 02 18 포트폴리오 다시확인 과거의 내가 잘해놧음 이제해야될일
+  1. 로그인회원가입 기능구현 (서버사이드언어랑 개발언어)
+  2. 반응형 css 또는 동적구현 리뉴얼 더 최적화 간결화
+  3. 새로운 기능추가
+   -->
   <link rel="stylesheet" href="css/main.css" type="text/css">
   <script src="js/pc_menu.js" charset="utf-8"></script>
   <script src="js/jquery.bxslider.min.js" charset="utf-8"></script>
